<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jukebox.world.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.jukebox.world.ui.profile.UserProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_new_release"
        android:name="com.jukebox.world.ui.newrelease.NewReleaseFragment"
        android:label="@string/menu_new_release"
        tools:layout="@layout/fragment_new_release" />


</navigation>