<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/mnotes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.home.HomeFragment">

    <com.glide.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="#ffffff"
                android:padding="16dp">

                <TextView
                    android:id="@+id/artists_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/list_artists"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_artists_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/artists_list" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/artists_list"
                    android:scrollbars="none"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/adele"
                            android:layout_width="@dimen/list_item_width"
                            android:layout_height="@dimen/list_item_height"
                            android:layout_marginRight="@dimen/list_item_right_margin"
                            android:background="@color/colorPrimary"
                            android:scaleType="centerCrop"
                            android:src="@drawable/adele" />

                        <ImageView
                            android:id="@+id/ruthb"
                            android:layout_width="@dimen/list_item_width"
                            android:layout_height="@dimen/list_item_height"
                            android:layout_marginRight="@dimen/list_item_right_margin"
                            android:background="@color/colorPrimary"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ruthb" />

                        <ImageView
                            android:id="@+id/shawnmendes"
                            android:layout_width="@dimen/list_item_width"
                            android:layout_height="@dimen/list_item_height"
                            android:background="@color/colorPrimary"
                            android:scaleType="centerCrop"
                            android:src="@drawable/shawnmendes" />

                    </LinearLayout>

                </HorizontalScrollView>

            </RelativeLayout>

            <RelativeLayout
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/albums_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/list_albums"
                    android:fontFamily="@font/aclonica"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_albums_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/albums_list" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/albums_list"
                    android:scrollbars="none"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/nomoney"
                            android:layout_width="@dimen/list_item_width"
                            android:layout_height="@dimen/list_item_height"
                            android:layout_marginRight="@dimen/list_item_right_margin"
                            android:background="@color/colorPrimary"
                            android:scaleType="centerCrop"
                            android:src="@drawable/nomoney" />

                        <ImageView
                            android:id="@+id/theocean"
                            android:layout_width="@dimen/list_item_width"
                            android:layout_height="@dimen/list_item_height"
                            android:layout_marginRight="@dimen/list_item_right_margin"
                            android:background="@color/colorPrimary"
                            android:scaleType="centerCrop"
                            android:src="@drawable/theocean" />

                        <ImageView
                            android:id="@+id/thescript"
                            android:layout_width="@dimen/list_item_width"
                            android:layout_height="@dimen/list_item_height"
                            android:background="@color/colorPrimary"
                            android:scaleType="centerCrop"
                            android:src="@drawable/thescript" />

                    </LinearLayout>

                </HorizontalScrollView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="#ffffff"
                android:padding="16dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/podcasts_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/list_podcasts"
                    android:fontFamily="@font/aclonica"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/podcasts_list"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/serial"
                            android:layout_width="@dimen/list_item_width"
                            android:layout_height="@dimen/list_item_height"
                            android:layout_marginRight="@dimen/list_item_right_margin"
                            android:background="@color/colorPrimary"
                            android:scaleType="centerCrop"
                            android:src="@drawable/serial" />

                        <ImageView
                            android:id="@+id/startup"
                            android:layout_width="@dimen/list_item_width"
                            android:layout_height="@dimen/list_item_height"
                            android:layout_marginRight="@dimen/list_item_right_margin"
                            android:background="@color/colorPrimary"
                            android:scaleType="centerCrop"
                            android:src="@drawable/startup" />

                        <ImageView
                            android:id="@+id/invisible"
                            android:layout_width="@dimen/list_item_width"
                            android:layout_height="@dimen/list_item_height"
                            android:background="@color/colorPrimary"
                            android:scaleType="centerCrop"
                            android:src="@drawable/invisible" />

                    </LinearLayout>

                </HorizontalScrollView>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>